# finance_ai_agent

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
responses/: 20250607_150114_Groq_TSLA_and_NVIDIA.txt  20250607_150127_OpenAI_TSLA_and_NVIDIA.txt  20250607_150536_Groq_TSLA_and_NVIDIA.txt  20250607_150551_OpenAI_TSLA_and_NVIDIA.txt  20250607_154151_Groq_TSLA_and_NVIDIA.txt  20250607_154206_OpenAI_TSLA_and_NVIDIA.txt  20250607_154522_Groq_TSLA_and_NVIDIA.txt  20250607_154534_OpenAI_TSLA_and_NVIDIA.txt  20250607_160128_Groq_TSLA_and_NVIDIA.txt  20250607_160141_OpenAI_TSLA_and_NVIDIA.txt  20250607_161713_Groq_TSLA_and_NVIDIA.txt  20250607_161729_OpenAI_TSLA_and_NVIDIA.txt
src/: .env.example  main.py  two_agents.py
src/ai_agent/: single_agent.py  two_agents.py
src/ai_agent_project/: single_agent.py  two_agents.py
src/prompts/: instructions.md
src/responses/: 20250607_144743_Groq_TSLA_and_NVIDIA.txt  20250607_144814_Groq_TSLA_and_NVIDIA.txt  20250607_144824_OpenAI_TSLA_and_NVIDIA.txt
src/utils/: logger.py  prompt_loader.py  save_response.py
