[tool.poetry]
name = "ai_agent_project"
version = "0.1.0"
description = "Comparison of the free open source available LLM model and OPENAI's paid LLM model for the AI agentic development"
authors = ["hariharan gopinath"]
packages = [
    { include = "ai_agent_project", from = "src" }
]
include = ["src/ai_agent_project/utils/*"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pytest = "^8.3.4"
ruff = "^0.4.4"
phi = "^0.6.7"  # Latest available version
yfinance = "^0.2.37"
groq = "^0.4.0"
duckduckgo-search = "^4.1.1"  # Modern, maintained alternative to duckduckgo
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Linting rules to apply
select = ["E", "F", "B", "I", "UP", "C90", "SIM"]
ignore = ["E501", "B008"]  # Line too long & function call as default arg

# Target Python version
target-version = "py311"

# Max line length
line-length = 100

# Files and directories to check
src = ["src", "tests"]

# Exclude patterns
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache"
]
