[tool.poetry]
name = "ai_agent_project"
version = "0.1.0"
description = "Comparison of free open-source LLMs and OpenAI's paid LLM for agentic AI development"
authors = ["Hariharan Gopinath"]
readme = "README.md"
packages = [
    { include = "ai_agent_project", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
yfinance = "^0.2.37"
groq = "^0.4.0"
duckduckgo-search = ">=4.5.0,<5.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.28.1"
pydantic = "^2.11.5"
phi = ">=0.6.7,<0.7.0"
openai = "^1.52.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.4.10"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "B", "I", "UP", "C90", "SIM"]
ignore = ["E501", "B008"]  # Line too long & function call as default arg
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [".venv", "build", "dist", "__pycache__", ".mypy_cache", ".pytest_cache"]